left align text & style fix for table and caches

--- a/src/dashboard/style/actions.scss
+++ b/src/dashboard/style/actions.scss
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     .button {
         padding: 1rem 2rem;
-        background: $dark-background;
+        background: #1e1e1e;
         border-radius: 15px;
         text-align: center;
         cursor: pointer;
