--- a/src/dashboard/style/caches.scss
+++ b/src/dashboard/style/caches.scss
@@ -9,6 +9,7 @@
             padding: 0;
             display: flex;
             align-items: center;
+            padding: 0 0.25rem;
         }
     }
     .square {
