--- a/src/dashboard/style/grid.scss
+++ b/src/dashboard/style/grid.scss
@@ -9,9 +9,8 @@ $dark-background: #1e1e1e;
 
 .grid-container {
     color: $text-color;
-    font-family: 'Open Sans', sans-serif;
-    letter-spacing: 1px;
-    // font-size: $base-font-size;
+    font-family: 'Roboto Mono', sans-serif;
+    // letter-spacing: 1px;
 
     & > * {
         background: $background;
@@ -82,39 +81,11 @@ h3 {
     margin: 0;
     text-align: center;
     margin-bottom: 1rem;
+    font-size: 2rem;
 }
 
 h4 {
     margin: 0;
-}
-
-table {
-    text-align: center;
-    border-collapse: collapse;
-    border: 2px solid #ccc;
-    width: 100%;
-    font-size: 1rem;
-}
-
-table td,
-table th {
-    border: 1px solid #ccc;
-    padding: 8px;
-    max-width: 25vw;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-table th {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-size: 1.2rem;
-}
-
-.th {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 1fr 25px;
 }
 
 .flx {
@@ -122,6 +93,10 @@ table th {
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
+}
+
+.flx-left {
+    justify-content: flex-start;
 }
 
 .btn {
